--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 authors = ["Nithin Chalapathi <nithin.ch10@gmail.com"]
 
 [dependencies]
-sdl2 = "0.13"
+sdl2 = "0.16.0"
+sdl2_image = "0.16.0"
